[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/blocks/DirtBlock.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/blocks/dirt_block.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/blocks/dirt_block_grass.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/seed/seed.png" type="Texture" id=4]
[ext_resource path="res://src/blocks/FloatCollision.gd" type="Script" id=5]
[ext_resource path="res://assets/animations/SeedBalloon.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 0.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31, 0.5 )

[node name="DirtBlock" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 1 )

[node name="SpriteStack" type="Node2D" parent="."]

[node name="StackSize2" type="Sprite" parent="SpriteStack"]
visible = false
position = Vector2( 0, 32 )
texture = ExtResource( 2 )

[node name="StackSize3" type="Sprite" parent="SpriteStack"]
visible = false
position = Vector2( 0, 64 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 3.0

[node name="SeedSprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-007, 0.250001 )
scale = Vector2( 1, 0.992188 )
texture = ExtResource( 4 )

[node name="DetectCeiling" type="Area2D" parent="."]
position = Vector2( 0, -32 )
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectCeiling"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="DetectFloor" type="Area2D" parent="."]
position = Vector2( 0, 15.5 )
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectFloor"]
position = Vector2( 0, 16.5 )
shape = SubResource( 3 )

[node name="SeedBalloon" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, -122 )
[connection signal="body_entered" from="DetectCeiling" to="." method="_on_DetectCeiling_body_entered"]
